eps does not work

--- a/main.tex
+++ b/main.tex
@@ -460,7 +460,7 @@ in the QM part. The MM part would be taken care of without modification of the s
 \begin{figure}
 %\vspace*{0.1in}   %%% FIGURE 0
 \begin{center}
-\includegraphics[width=\columnwidth]{diagram.eps}
+\includegraphics[width=\columnwidth]{diagram.png}
 \end{center}
 \vspace{0.25in}
 \hspace*{3in}
